--- a/src/main/resources/static/css/questions.css
+++ b/src/main/resources/static/css/questions.css
@@ -1,4 +1,5 @@
 .leftnav{
+    padding-top: 50px;
     height: 100vh;
     float:left;
     overflow: auto;
@@ -6,15 +7,142 @@
     background-color: white;
 }
 
-.main {
-    padding-top: 50px;
-    position: relative;
-    background-color: #e6e6e6;
-    height: 100vh;
-    overflow: auto;
-    width: 85%;
-    line-height: inherit;
+.navbutton:hover {
+    background-color: #2e6da4;
 }
+
+.main {
+    padding-top: 80px;
+    padding-left: 50px;
+    position: relative;
+    font-family: "Courier New";
+    height: 120px;
+    width: 85%;
+    background-color: white;
+    font-size: 15px;
+    overflow: auto;
+}
+
+.sec1 {
+    padding-top: 10px;
+    padding-left: 50px;
+    position: relative;
+    height: 80px;
+    width: 85%;
+    background-color: white;
+    overflow: auto;
+}
+
+.sec2 {
+    padding-left: 50px;
+    position: relative;
+    height: 80px;
+    width: 85%;
+    background-color: white;
+    overflow: auto;
+}
+
+.p {
+    padding-top: 10px;
+    padding-left: 50px;
+    position: relative;
+    height: 40px;
+    width: 20%;
+    background-color: white;
+    text-align: center;
+    vertical-align: middle;
+    font-weight: bold;
+    overflow: auto;
+}
+
+.answer {
+    padding-top: 10px;
+    padding-left: 50px;
+    position: relative;
+    height: 100px;
+    width: 85%;
+    background-color: white;
+    font-family: "Courier New";
+    font-size: 15px;
+    overflow: auto;
+}
+
+.numbut {
+    background: #e86161;
+    width: 45%;
+    background-image: -webkit-linear-gradient(top, #e86161, #ff0000);
+    background-image: -moz-linear-gradient(top, #e86161, #ff0000);
+    background-image: -ms-linear-gradient(top, #e86161, #ff0000);
+    background-image: -o-linear-gradient(top, #e86161, #ff0000);
+    background-image: linear-gradient(to bottom, #e86161, #ff0000);
+    -webkit-border-radius: 27;
+    -moz-border-radius: 27;
+    border-radius: 27px;
+    font-family: Courier New;
+    color: #000000;
+    font-size: 25px;
+    padding: 10px 25px 10px 25px;
+    border: solid #208040 10px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.numbut:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+}
+
+.submit {
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Courier New;
+    color: #ffffff;
+    font-size: 25px;
+    padding: 10px 20px 10px 20px;
+    border: solid #58a0cc 2px;
+    text-decoration: none;
+}
+
+.submit[disabled] {
+    background: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+    background-image: -o-linear-gradient(top, #3498db, #2980b9);
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Courier New;
+    color: #cccccc;;
+    font-size: 25px;
+    padding: 10px 20px 10px 20px;
+    border: solid #58a0cc 2px;
+    text-decoration: none;
+}
+
+.submit:hover:not([disabled]) {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+}
+
 button
 {
     background-color: #cccccc; /* Green */
@@ -28,8 +156,4 @@ button
     width: 100%;
     margin: 5px;
     border: 1px solid black;
-}
-
-button:hover {
-    background-color: #2e6da4;
 }
